Fixing Layout to hide logo and reset nav bar to be horizontal when user is on small/mobile screen

--- a/src/containers/Layout/index.css
+++ b/src/containers/Layout/index.css
@@ -20,10 +20,8 @@
   object-fit: contain;
   width: 20vh;
   height: 8em;
-  color: black;
   font-family: 'Inconsolata', monospace;
   font-size: 3vmin;
-  object-fit: contain;
 }
 
 #logo {
@@ -49,7 +47,6 @@
   margin-right: 1vh;
   display: flex;
   align-items: left;
-
 } 
 
 /* global styling */
@@ -71,4 +68,39 @@
 
 #loading {
   margin-top: 21vh;
+}
+
+@media only screen and (max-width: 767px) {
+  #layout {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+ 
+  #navLinks {
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   align-content: left;
+   width: 100%;
+   font-family: 'Inconsolata', monospace;
+   font-size: 3vmin;
+ }
+
+ #navLinks .text {
+   padding: 1vh;
+   width: 100%;
+
+ }
+
+  #logo {
+    visibility: hidden;
+    width: 0;
+  }
+
+  #logoWrapper {
+    visibility: hidden;
+    width: 0;
+  }
+ 
 }
